# FSLog

./: CMakeLists.txt  README.md  build.bat  build.sh  fslog.h  fslog_thread.h  main.cpp  timer.h
include/: fslog.h  fslog_test.h  timer.h
